syntax = "proto3";

option go_package = ".;proto";

service User {
  rpc GetUserList(ListRequest) returns (UserListResponse); // 获取用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); // 通过手机获取用户信息
  rpc GetUserById(IdRequest) returns (UserInfoResponse); // 通过id获取用户信息
  rpc CreateUser(CreateUserRequest)returns (UserInfoResponse); // 创建用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateResponse); // 更新用户信息
  rpc CheckPassword (PasswordCheckRequest) returns (CheckResponse); // 验证密码
}

message PasswordCheckRequest {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}

message UpdateResponse {
  bool success = 1;
}

message IdRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string nickName = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message MobileRequest {
  string mobile = 1;
}

message ListRequest {
  uint32 pageSize = 1;
  uint32 pageIndex = 2;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse {
  uint32 total = 1;
  repeated UserInfoResponse data = 2;
}